--- a/kogito-codegen-modules/kogito-codegen-processes/pom.xml
+++ b/kogito-codegen-modules/kogito-codegen-processes/pom.xml
@@ -27,7 +27,19 @@
     <artifactId>kogito-codegen-modules</artifactId>
     <version>999-SNAPSHOT</version>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <modelVersion>4.0.0</modelVersion>
   <artifactId>kogito-codegen-processes</artifactId>
   <name>Kogito :: Codegen Processes</name>
 
